statc table init

--- a/src/routes/root.css
+++ b/src/routes/root.css
@@ -1,3 +1,9 @@
-.navbar--ul a:not(.active) .nav--button:hover svg path   {
-    fill: #334155 !important; 
+.navbar--ul a:not(.active) .nav--button:hover svg path {
+  fill: #334155 !important;
+}
+table {
+  border-collapse: collapse;
+  border-radius: 12px;
+  border-style: hidden; /* hide standard table (collapsed) border */
+  box-shadow: 0 0 0 1px #cbd5e1; /* this draws the table border  */
 }
