--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 :root {
   font-family: cairo, sans-serif;
@@ -14,3 +12,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+small {
+  line-height: 1.3rem !important;
+}
